# mlb-elo

./: DZ_RECIPE.yml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
mlb_elo/: data.py
mlb_elo/data/: main.py
mlb_elo/notebooks/: clean.ipynb  exploration.ipynb  gamesD.orc  gamesD.parquet  notes.md
tests/: test_app.py
