[tool.poetry]
name = "mlb-elo"
version = "0.1.0"
description = "mlb-elo"
authors = ["cmiller01 <christian.david.miller@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mlb_elo"}]

[tool.poetry.dependencies]
python = "~3.11"
pybaseball = "^2.2.5"
pytest = "^7.4.0"
flake8 = "^6.0.0"
pandas = "^2.0.3"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
